# tessellation

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  fix-test-failures.md  javascript-pro.md  test-writer.md
.claude/skills/checkin/: SKILL.md
.claude/skills/fix-test-failures/: SKILL.md
.claude/skills/testing-philosophy/: SKILL.md
.cursor/commands/: acp.md
.github/workflows/: deploy-demo.yml
demo/: build-wasm.ps1  index.html  package-lock.json  package.json  vite.config.ts
demo/src/: controls.ts  main.css  main.ts  renderer.ts  wasm.ts
demo/src/demos/: basic-shapes.ts  csg-operations.ts  custom-functions.ts  resolution.ts
demo/wasm/: Cargo.toml
demo/wasm/src/: lib.rs
examples/: csg_shapes.rs  sharp_features.rs  sphere.rs
src/: bounding_box.rs  lib.rs  manifold_dual_contouring.rs  mesh.rs  qef.rs  sdf.rs  vertex_index.rs
